--- a/src/styles/MainPanel.css
+++ b/src/styles/MainPanel.css
@@ -1,22 +1,27 @@
 .main-panel {
-  width: 1100px;
+  width: 80%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
 
 .main-panel .day {
-  padding: 20px;
+  padding: 0 20px;
 }
 
 .main-panel .row {
   display: flex;
   flex-direction: column;
-  background-color: aquamarine;
+  align-items: flex-start;
+}
+
+.main-panel .date {
+  color: #747474;
+  font-size: calc(18px + 2vmin);
+  opacity: 0.4;
 }
 
 .main-panel .row .hours {
   display: flex;
   justify-content: space-evenly;
-  background-color: blueviolet;
 }
