--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -1,9 +1,45 @@
 .search {
-  background-color: #282c34;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: c;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(18px + 2vmin);
   color: white;
+}
+
+button {
+  position: absolute;
+  right: 20px;
+  border: none;
+  display: inline-block;
+  background-color: transparent;
+  border-radius: 10px;
+  color: #ffe400;
+  text-align: center;
+  font-size: calc(2px + 2vmin);
+  padding: 10px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+button span:after {
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+button:hover span {
+  padding-right: 25px;
+}
+button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
