--- a/src/styles/Rows.css
+++ b/src/styles/Rows.css
@@ -1,27 +1,27 @@
-.main-panel {
+.rows {
   width: 80%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
 
-.main-panel .day {
+.rows .day {
   padding: 0 20px;
 }
 
-.main-panel .row {
+.rows .row {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
-.main-panel .date {
+.rows .date {
   color: #747474;
   font-size: calc(18px + 2vmin);
   opacity: 0.4;
 }
 
-.main-panel .row .hours {
+.rows .row .hours {
   display: flex;
   justify-content: space-evenly;
 }
